--- a/site/View/Themed/LyricJam/webroot/css/lyricjam.css
+++ b/site/View/Themed/LyricJam/webroot/css/lyricjam.css
@@ -20,6 +20,15 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
+.footer-links {
+	display: inline-block;
+	margin-top: 10px;
+}
+.copyleft {
+	color: #999;
+	font-size: 10px;
+	padding: 7px 15px;
+}
 
 /* Toggle header and navbar brand on mobile devices */
 .navbar {
@@ -40,4 +49,22 @@ body {
 
 #searchbar {
 	width: 270px;
+}
+
+/* Browse list in navbar */
+.browse-list {
+	width: 230px;
+	font-size: 20px;
+}
+.browse-item-text {
+	margin-left: 20px;
+}
+.browse-list .badge {
+	background-color: #555;
+	margin-top: 5px;
+}
+.browse-list .active .badge,
+.browse-list a:hover .badge {
+	background-color: #fff;
+	color: #357ebd;
 }
