--- a/site/View/Themed/LyricJam/webroot/css/lyricjam.css
+++ b/site/View/Themed/LyricJam/webroot/css/lyricjam.css
@@ -81,6 +81,21 @@ body {
 	max-width: 400px;
 }
 
+/* Breadcrumbs hacks to make microdata markup work */
+.breadcrumb > span > li {
+	display: inline-block;
+}
+
+.breadcrumb > span + span:before {
+	padding: 0 0 0 5px;
+	color: #cccccc;
+	content: "/\00a0";
+}
+
+.breadcrumb > span > .active {
+	color: #999999;
+}
+
 /* Home page */
 .fancy-holder {
 	box-shadow: 0 1px 2px rgba(0,0,0,0.075);
