--- a/site/View/Themed/LyricJam/webroot/css/lyricjam.css
+++ b/site/View/Themed/LyricJam/webroot/css/lyricjam.css
@@ -177,15 +177,28 @@ body {
 }
 
 .album-list {
-	padding-left: 45px;
-	overflow: hidden;
+	padding-left: 35px;
+	overflow-y: auto;
 }
+.album-list::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+.album-list::-webkit-scrollbar {
+	width: 6px;
+	background-color: #F5F5F5;
+}
+.album-list::-webkit-scrollbar-thumb{
+	background-color: #000000;
+}
+
 .album-list > a {
 	display: inline-block;
 	margin: 7px;
 }
 .album-list img {
 	border-radius: 4px;
+	box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.8);
 }
 
 /* SONG PAGE */
