Added lettered index and replaced nl2br for lyrics with str_replace of <p>

--- a/site/View/Themed/LyricJam/webroot/css/lyricjam.css
+++ b/site/View/Themed/LyricJam/webroot/css/lyricjam.css
@@ -208,3 +208,16 @@ body {
 	clear: right;
 	margin: 8px;
 }
+
+/* LYRICS PAGE */
+
+.lyrics p {
+	line-height: 10px;
+}
+
+/* BROWSE PAGE */
+
+.letter-list {
+	text-transform: uppercase;
+	font-weight: bold;
+}
